@@ -9,7 +9,7 @@ ui_HeaderEntry.py: ui_HeaderEntry.ui
 	pyuic4 -o ui_HeaderEntry.py ui_HeaderEntry.ui
 
 clean:
-	rm -rf *~ testfile*
+	rm -rf *~ testfile* *.pdf *.png *.aux *.log *.dvi
 
 distclean: clean
 	rm -rf ui_BookEntry.py ui_HeaderEntry.py *.pyc __pycache__
