@@ -35,12 +35,12 @@ class BookFile():
     def __init__(self, parent=None):
         self._entryList = []
         self._volumeNumber = -1
-        self._fileName = ''
-        self._baseName = ''
-        self.curEntryNumber = -1  # 0 <= curEntryNumber < len(self._entryList)
-        self._dirty = False
+        self._fileName = 'document1'
+        self._baseName = './'
+        self.curEntryNumber = -1  # 1 <= curEntryNumber <= len(self._entryList)
         self._header = __defaultHeader__
         self.setFileName('document1')
+        self._dirty = False
 
 
     # dirty (modified) file
