@@ -33,14 +33,18 @@ def createMenus( self, menuBar):
         fileMenu = menuBar.addMenu('&File')
 
 
-        newFileAction = createAction( self, '&New',
-                                       self.openNew, 'Ctrl+N' )
-        openFileAction = createAction( self, '&Open',
-                                       self.openFile, 'Ctrl+O' )
-        saveAction = createAction( self, '&Save', self.saveFile, 'Ctrl-S')
-        saveAsAction = createAction( self, 'Save &As...', self.saveFileAs, 
-                                     'Ctrl+A')
-        printAction = createAction( self, '&Print Entry...', self.printEntry,
+        newFileAction = createAction( self, '&New File',
+                                       self.openNewFile, 'Ctrl+N' )
+        openFileAction = createAction( self, '&Open File...',
+                                       self.askOpenFile, 'Ctrl+O' )
+        saveAction = createAction( self, '&Save File',
+                                   self.saveFile, 'Ctrl+S')
+        saveAsAction = createAction( self, 'Save File &As...',
+                                     self.saveFileAs, 'Ctrl+A')
+        newEntAction = createAction( self, 'New &Entry',
+                                     self.newEntry, 'Ctrl+E')
+        saveEntAction = createAction( self, 'Save Entry', None, None )
+        printAction = createAction( self, '&Print Entry', self.printEntry,
                                     'Ctrl+P')
         exitAction = createAction(self, '&Quit', self.quit, 'Ctrl+Q',
                                   'filequit', 'Close the Application')
@@ -49,7 +53,11 @@ def createMenus( self, menuBar):
         fileMenu.addAction(openFileAction)
         fileMenu.addAction(saveAction)
         fileMenu.addAction(saveAsAction)
+        fileMenu.addSeparator()
+        fileMenu.addAction(newEntAction)
+        fileMenu.addAction(saveEntAction)
         fileMenu.addAction(printAction)
+        fileMenu.addSeparator()
         fileMenu.addAction(exitAction)
 
 
@@ -57,9 +65,13 @@ def createMenus( self, menuBar):
 
         # set up the Edit menus, Cut, Copy, Paste, Delete  make gray
         cutAction = createAction(self, 'Cu&t', None, 'Ctrl+X')
+        cutAction.setEnabled(False)
         copyAction = createAction(self, '&Copy', None, 'Ctrl+C') 
+        copyAction.setEnabled(False)
         pasteAction = createAction(self, '&Paste', None, 'Ctrl+V')
+        pasteAction.setEnabled(False)
         deleteAction = createAction(self, '&Delete', None, 'Del')
+        deleteAction.setEnabled(False)
         addInfoAction = createAction(self, 'Additional &Info...',
                                      None, 'Ctrl+T')
         symbolAction = createAction(self, '&Insert Symbol...', self.openSymbol, 'Ctrl+I')
