@@ -1,3 +1,10 @@
+2013-01-27  Jim Fowler  <jrf@Biblion>
+
+	* Tools/src/BookEntry.py (BookEntry): added saveEntry, newEntry, saveFile,
+	saveFileAs, newFile, openFile, askSaveEntry, and askSaveFile.
+
+	* Tools/src/bookfile.py (BookFile): set default name in __init__.
+
 2013-01-26  Jim Fowler  <jrf@Biblion>
 
 	* Tools/src/bookfile.py (BookFile.readFile): corrected an error
